# topic-set-tests

./: README.md
batch-tester/: main.py  test-configuration.json
c-client/: .gitignore  CMakeLists.txt
c-client/dependencies/linux/apr/lib/: libapr-1.la  libapr-1.so.0.7.0  libaprutil-1.la  libaprutil-1.so.0.6.1
c-client/dependencies/linux/apr/lib/pkgconfig/: apr-1.pc  apr-util-1.pc
c-client/dependencies/linux/diffusion/include/: authenticator.h  conversation.h  error.h  fetch-request.h  hash.h  lws_config.h  range-query.h  session.h  set.h  streams.h  topic-notification-registration.h  topic-selector.h  update-stream-builder.h
c-client/dependencies/linux/diffusion/include/datatypes/: diffusion-string.h  diffusion-value.h
c-client/dependencies/linux/diffusion/include/datatypes/recordv2/: diffusion-recordv2-mutable-record-model.h  diffusion-recordv2-record-model.h  diffusion-recordv2-schema-builder.h  diffusion-recordv2-schema-field.h  diffusion-recordv2-schema-record.h
c-client/dependencies/linux/diffusion/include/features/: authentication-control.h  security.h  session-trees.h  subscription-control.h  topic-notifications.h  topic-update.h
c-client/dependencies/linux/diffusion/include/misc/: deprecate.h
c-client/dependencies/linux/diffusion/include/openssl/: opensslconf.h
c-client/dependencies/linux/diffusion/include/types/: content_types.h  conversation_types.h  error_types.h  topic_types.h
c-client/dependencies/macos/apr/lib/: libapr-1.0.dylib  libapr-1.la  libaprutil-1.0.dylib  libaprutil-1.la
c-client/dependencies/macos/apr/lib/apr-util-1/: apr_dbd_sqlite3.la
c-client/dependencies/macos/apr/lib/pkgconfig/: apr-1.pc  apr-util-1.pc
c-client/dependencies/macos/diffusion/include/: activity-history.h  apr.h  args.h  buf.h  cbor.h  d_semaphore.h  datatypes.h  delta.h  diffusion-api-error.h  list.h  responder.h  security.h  selector.h  topic-specification.h  update-constraint.h  update-stream.h  value-stream.h
c-client/dependencies/macos/diffusion/include/datatypes/: diffusion-double.h  diffusion-int64.h  diffusion-recordv2.h
c-client/dependencies/macos/diffusion/include/features/: client-control.h  pings.h  remote-servers.h  system-authentication-control.h  topic-control.h  topic-views.h  topics.h
c-client/dependencies/macos/diffusion/include/openssl/: opensslconf.h
c-client/dependencies/macos/diffusion/include/types/: client_details_types.h  common_types.h  messaging_types.h  security_types.h  service_types.h  session_types.h  transport_types.h
c-client/dependencies/windows/diffusion/include/: api_version.h  buf.h  diffusion.h  doxygen-defs.h  hash_num.h  list.h  lws_config.h  lws_config_private.h  reconnect.h  registration.h  retry-strategy.h  session-factory.h  session-lock.h  topic.h  utils.h
c-client/dependencies/windows/diffusion/include/datatypes/: diffusion-binary.h  diffusion-json.h
c-client/dependencies/windows/diffusion/include/datatypes/recordv2/: diffusion-recordv2-builder.h  diffusion-recordv2-schema.h
c-client/dependencies/windows/diffusion/include/features/: messaging.h  metrics.h  security-control.h  time-series.h
c-client/dependencies/windows/diffusion/include/types/: update_types.h
c-client/dependencies/windows/zlib/x64/lib/: zlib.lib
c-client/dependencies/windows/zlib/x86/lib/: zlib.lib
c-client/source/: program.c  test_add_and_set.c  test_add_and_set.h  test_utils.c  test_utils.h
dotnet-client/: .gitignore  Program.cs  README.md  SemaphoreQueue.cs  dotnet-client.csproj
java-client/: README.md  pom.xml
java-client/src/main/java/com/pushtechnology/topicsettest/: TopicSetTest.java
